chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__functions__test__snapshot__setup_func.snap
---
source: chainsight-cdk-macros/src/functions.rs
expression: formatted
---
manage_single_state!("setup_flag", bool, false);
#[ic_cdk::update]
#[candid::candid_method(update)]
fn setup(
    target_canister: String,
    target_addr: String,
    web3_ctx_param: Web3CtxParam,
) -> Result<(), String> {
    assert!(!bool::from(get_setup_flag()), "Already setup");
    set_target_canister(target_canister.into());
    set_target_addr(target_addr.into());
    set_web3_ctx_param(web3_ctx_param.into());
    set_setup_flag(true.into());
    Ok(())
}

