chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__functions__test__snapshot__setup_func_with_stable_memory.snap
---
source: chainsight-cdk-macros/src/functions.rs
expression: formatted
---
chainsight_cdk_macros::stable_memory_for_scalar!("setup_flag", StorableBool, 0, false);
#[ic_cdk::update]
#[candid::candid_method(update)]
fn setup(
    target_canister: String,
    target_addr: String,
    web3_ctx_param: Web3CtxParam,
) -> Result<(), String> {
    assert!(!bool::from(get_setup_flag()), "Already setup");
    set_target_canister(target_canister);
    set_target_addr(target_addr);
    set_web3_ctx_param(web3_ctx_param);
    set_setup_flag(true.into());
    Ok(())
}

