chainsight-cdk-macros/src/snapshots/chainsight_cdk_macros__functions__test__snapshot__timer_task_func_with_stable_memory.snap
---
source: chainsight-cdk-macros/src/functions.rs
expression: formatted
---
stable_memory_for_scalar!("indexing_interval", u32, 1, false);
#[ic_cdk::update]
#[candid::candid_method(update)]
pub async fn set_task(task_interval_secs: u32, delay_secs: u32) {
    set_task_with_rounded(task_interval_secs, delay_secs, false).await;
}
#[ic_cdk::update]
#[candid::candid_method(update)]
pub async fn set_task_with_rounded(
    task_interval_secs: u32,
    delay_secs: u32,
    is_rounded_start_time: bool,
) {
    set_indexing_interval(task_interval_secs);
    let res = ic_cdk::api::call::call::<(u32, u32, bool, String, Vec<u8>), ()>(
        proxy(),
        "start_indexing_with_is_rounded",
        (
            task_interval_secs,
            delay_secs,
            is_rounded_start_time,
            "HELLO".to_string(),
            Vec::<u8>::new(),
        ),
    )
    .await;
    match res {
        Ok(_) => {}
        Err(e) => {
            panic!("Failed to start indexing: {:?}", e)
        }
    };
}

